# learn-ai-engineering

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CURRICULUM.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml
ai-engineering/: README.md
ai-engineering/01-prompt/: README.md  prompt-engineering.md  prompt-injection.md
data-analytics/: 5_Statistical_Analysis.ipynb  CURRICULUM.md  README.md  SimpleHacks.md
data-engineering/: CURRICULUM.md  README.md  awesome-data-engineering.md
data-science/: CURRICULUM.md  README.md  approaching-almost-any-nlp-problem-on-kaggle.ipynb  deep-learning-starter-simple-lstm.ipynb
generative-ai/: README.md
generative-ai/04-agentic-frameworks/Long-Term-Agentic-Memory-With-LangGraph-main/: MonitorSetup.ipynb  README.md  __init__.py  examples.py  helper.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  utils.py
generative-ai/04-agentic-frameworks/Long-Term-Agentic-Memory-With-LangGraph-main/Lesson 2_Baseline Email Assistant/: Lesson 2_Baseline Email Assistant.ipynb  examples.py  helper.py  img.htm  lesson2.ipynb  requirements.htm  schemas.py  utils.py
generative-ai/04-agentic-frameworks/Long-Term-Agentic-Memory-With-LangGraph-main/Lesson 3_Email Assistant with Semantic Memory/: Lesson 3_Email Assistant with Semantic Memory.ipynb  lesson_3.ipynb  prompts.py  requirements.htm  schemas.py  utils.py
generative-ai/04-agentic-frameworks/Long-Term-Agentic-Memory-With-LangGraph-main/Lesson 5_Email Assistant with Semantic + Episodic + Procedural Memory/: examples.py  lesson_5.ipynb  prompts.py  requirements.htm  schemas.py  utils.py
generative-ai/04-agentic-frameworks/Long-Term-Agentic-Memory-With-LangGraph-main/lesson 4_Email Assistant with Semantic + Episodic MemoryLesson 4_/: examples.py  lesson_4.ipynb  prompts.py  requirements.htm  schemas.py  utils.py
generative-ai/chatbot/deep-research-bot/: CLAUDE.md  README.md  pyproject.toml  update_agent_rules.py
generative-ai/chatbot/deep-research-bot/deep_research_bot/: agent.py  utils.py
generative-ai/chatbot/deep-research-bot/deep_research_bot/evaluation/: eval.py  eval_config.py  judge_prompts.py
generative-ai/chatbot/deep-research-bot/examples/: weave_evaluator_integration.py
generative-ai/chatbot/deep-research-bot/notebooks/: 01_simple_agent.ipynb  02_deep_research_agent.ipynb  03_rl_for_deep_research_agent.ipynb
generative-ai/chatbot/deep-research-bot/tests/: __init__.py  fixture_criteria.jsonl  fixture_query.jsonl  fixture_target.jsonl  test_eval.ipynb
generative-ai/coursera-references/internet-search-agent-main/: .pre-commit-config.yaml  LICENSE  langgraph.json  pyproject.toml
generative-ai/coursera-references/internet-search-agent-main/src/: utils.py
generative-ai/coursera-references/internet-search-agent-main/src/clients/: search_client.py
generative-ai/coursera-references/internet-search-agent-main/src/graphs/: get_agents.py  simple_search_agent.py  workflow_agent.py
generative-ai/coursera-references/internet-search-agent-main/src/models/: chat_schemas.py  history_schemas.py  state_schemas.py
generative-ai/coursera-references/internet-search-agent-main/src/routes/: chat_route.py  health_route.py  history_route.py  status_route.py
generative-ai/coursera-references/internet-search-agent-main/src/services/: state_parser.py
generative-ai/coursera-references/internet-search-agent-main/tests/: conftest.py  test_graphs.py  test_models.py  test_routes.py
generative-ai/coursera-references/langfuse-mcp-python-main/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
generative-ai/coursera-references/langfuse-mcp-python-main/src/langfuse_mcp_python/: __init__.py  __main__.py  server.py
generative-ai/coursera-references/langfuse-mcp-python-main/src/langfuse_mcp_python/core/: base_tool.py
generative-ai/coursera-references/langfuse-mcp-python-main/src/langfuse_mcp_python/integrations/: langfuse_client.py
generative-ai/coursera-references/langfuse-mcp-python-main/src/langfuse_mcp_python/tools/: __init__.py  analyze_performance.py  annotation_queues.py  blob_storage_integrations.py  comments.py  cost_metrics.py  datasets.py  llm_connections.py  models.py  score_configs.py  scores.py  sessions.py  trace.py  watch_agents.py
generative-ai/coursera-references/langfuse-mcp-python-main/src/langfuse_mcp_python/utils/: __init__.py  formatters.py  metrics.py  tool_registry.py
interviewing/: README.md
programming/: README.md  eslint.md  git.md
readings/: README.md
scripts/: link_check.py
(+1107 files in other folders)
