[tool.poetry]
name = "memory-course"
version = "0.1.0"
authors = ["YH Hsu <twyunghui@gmail.com>"]
description = "LangGraph Memory Course"
package-mode = false
 
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.0.1"
langchain = "0.3.18"
langchain-anthropic = "0.3.7"
langchain-openai = "*"
langgraph = "0.2.72"
langmem = "0.0.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"