[tool.poetry]
name = "memory-course"
version = "0.1.0"
authors = ["YH Hsu <twyunghui@gmail.com>"]
description = "LangGraph Memory Course"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.0.1"
langchain = "0.3.30"
langchain-anthropic = "0.3.22"
langchain-openai = "*"
langgraph = "1.0.1"
langmem = "0.0.30"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5,<8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
