[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-research-bot"
version = "0.1.0"
description = "Minimal DeepResearch agent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Deep Research Bot Maintainers" }]
dependencies = [
    "exa-py>=1.16.1",
    "ipykernel>=7.0.1",
    "jupyterlab>=4.5.9",
    "openai>=2.3.0",
    "pytest",
    "pydantic>=2.0,<3.0",
    "python-dotenv",
    "rich>=14.2.0",
    "simple-parsing>=0.1.7",
    "weave>=0.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["deep_research_bot"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211",
    "ignore:.*Hub is deprecated.*::",
    "ignore:The 'warn' method is deprecated, use 'warning' instead:DeprecationWarning",
]

[project.scripts]
deep-research-eval = "deep_research_bot.eval:main"
