[project]
name = "internet-search-agent"
version = "0.1.0"
description = "Internet search agent for sustainability goals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-cli[inmem]>=0.2.10",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.6",
    "crawl4ai>=0.6.3",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "aiosqlite>=0.21.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["older_scripts/", "aiexpress/"]

[tool.ruff.lint]
select = [
    'F',
    'E',
    'I',
    'UP',
    'YTT',
    'B',
    'T10',
    # Enable if you want to find print statements
    # 'T20',
    'C4',
    'PYI006',
]
ignore = ["E501", "B008"]
